added dummy userlist component

--- a/projects/angular-ngrx-material-starter/src/app/features/home/home/home.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/features/home/home/home.component.html
@@ -3,4 +3,6 @@
   <h1>This is home page</h1>
 
   <anms-form >this is the form</anms-form>
+
+  <anms-userlist>This is user list</anms-userlist>
 </div>
