--- a/projects/angular-ngrx-material-starter/src/app/features/home/home/home.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/features/home/home/home.component.html
@@ -1,8 +1,17 @@
-<div class="background">
+<div class="container">
 
-  <h1>This is home page</h1>
+  <h1>Job catering</h1>
 
-  <anms-form >this is the form</anms-form>
+  <div class="row">
+    <div class="col-md-8">
+      <anms-form></anms-form>
+    </div>
+    <div class="col-md-4">
+      <anms-userlist></anms-userlist>
+    </div>
+  </div>
 
-  <anms-userlist>This is user list</anms-userlist>
+
+
+
 </div>
