--- a/projects/angular-ngrx-material-starter/src/app/features/home/form/form.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/features/home/form/form.component.html
@@ -4,22 +4,19 @@
       <h2 class="main-heading">Creating User Profile</h2>
     </div>
   </div>
-  <ng-container *ngIf="formValueChanges$ | async as updatedForm">
-    {{update(updatedForm)}}
-  </ng-container>
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="row justify-content-center">
       <div class="col-md-12">
         <mat-card>
           <div class="row">
-            <mat-form-field class="col" [ngClass]="routeAnimationsElements">
+            <mat-form-field class="col" >
               <input matInput placeholder="First Name"
                 formControlName="firstName">
               <mat-error *ngIf="form.get('firstName').invalid">
                 First Name is invalid.
               </mat-error>
             </mat-form-field>
-            <mat-form-field class="col" [ngClass]="routeAnimationsElements">
+            <mat-form-field class="col" >
               <input matInput placeholder="Last Name"
                      formControlName="lastName">
               <mat-error *ngIf="form.get('lastName').invalid">
@@ -28,7 +25,7 @@
             </mat-form-field>
           </div>
           <div class="row">
-            <mat-form-field class="col" [ngClass]="routeAnimationsElements">
+            <mat-form-field class="col" >
               <input matInput placeholder="Display Name"
                      formControlName="displayName">
               <mat-error *ngIf="form.get('displayName').invalid">
@@ -37,7 +34,7 @@
             </mat-form-field>
           </div>
           <div class="row">
-            <mat-form-field class="col" [ngClass]="routeAnimationsElements">
+            <mat-form-field class="col" >
               <input matInput placeholder="Email"
                 formControlName="email" type="email">
               <mat-error *ngIf="form.get('email').hasError('required')">
@@ -49,7 +46,7 @@
             </mat-form-field>
           </div>
           <div class="row">
-            <mat-form-field class="col" [ngClass]="routeAnimationsElements">
+            <mat-form-field class="col" >
               <textarea matInput placeholder="Description of meal preference"
                 formControlName="description" minlength="10" maxlength="1000" cdkTextareaAutosize
                 #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="3" cdkAutosizeMaxRows="10"></textarea>
@@ -67,7 +64,7 @@
             </mat-form-field>
           </div>
           <div class="row">
-            <mat-form-field class="col" [ngClass]="routeAnimationsElements">
+            <mat-form-field class="col" >
               <input matInput placeholder="Department"
                      formControlName="department">
               <mat-error *ngIf="form.get('department').invalid">
@@ -76,7 +73,7 @@
             </mat-form-field>
           </div>
           <div class="row">
-            <mat-form-field class="col" [ngClass]="routeAnimationsElements">
+            <mat-form-field class="col" >
               <input matInput placeholder="Team"
                      formControlName="team">
               <mat-error *ngIf="form.get('team').invalid">
@@ -85,10 +82,10 @@
             </mat-form-field>
           </div>
           <div class="row buttons d-flex justify-content-between pad">
-            <button mat-raised-button color="primary" [ngClass]="routeAnimationsElements">
+            <button mat-raised-button color="primary" >
               save
             </button>
-            <button type="reset" mat-raised-button (click)="reset()" [ngClass]="routeAnimationsElements">
+            <button type="reset" mat-raised-button (click)="reset()" >
               reset
             </button>
           </div>
